fix(basic-3.8): separate selectors and properties by line wrapping

--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body {
 
 @media (max-width:768px) {  
 
-  .description-method { text-align: center;
+  .description-method { 
+    text-align: center;
 }
 
 }
@@ -41,10 +42,12 @@ ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+li, 
+h3 {
   list-style: none;
 }
-input,button{
+input,
+button{
   outline: none;
 }
 .add-item__button-new-task,
